--- a/index.html
+++ b/index.html
@@ -1471,6 +1471,19 @@
                     { label: "Status", value: "In Development" }
                 ]
             },
+            {
+                name: "Ecological Commitment & Workshop Facilitation",
+                description: "My commitment to sustainability started in high school by founding an ecological association: we implemented waste sorting in the cafeteria, introduced animals to the playground for biodiversity, and designed a solar-powered autonomous classroom. Today, I am a trained and certified facilitator for the 'Climate Fresco' and 'Aeronautical Fresco,' conducting awareness workshops for students and corporate teams.",
+                images: ["images/fresque.jpg"], // Remplace par tes vraies images
+                pdf: null, // Mettre un lien si tu as un diplôme/certificat, sinon null
+                skills: ["Public Speaking", "Workshop Facilitation", "Sustainability Strategy", "Environmental Awareness", "Leadership"],
+                details: [
+                    { label: "Certifications", value: "Climate & Aero Fresco" },
+                    { label: "Target Audience", value: "Students & Companies" },
+                    { label: "HS Projects", value: "Solar Class & Bio-zone" },
+                    { label: "Role", value: "Founder & Facilitator" }
+                ]
+            },
         ];
 
         let currentFilter = 'all';
@@ -1852,3 +1865,4 @@
     </script>
 </body>
 </html>
+
