--- a/index.html
+++ b/index.html
@@ -1472,7 +1472,7 @@
                 ]
             },
             {
-                name: "Ecological Commitment & Workshop Facilitation",
+                name: "Ecological Commitment",
                 description: "My commitment to sustainability started in high school by founding an ecological association: we implemented waste sorting in the cafeteria, introduced animals to the playground for biodiversity, and designed a solar-powered autonomous classroom. Today, I am a trained and certified facilitator for the 'Climate Fresco' and 'Aeronautical Fresco,' conducting awareness workshops for students and corporate teams.",
                 images: ["images/fresque.jpg"], // Remplace par tes vraies images
                 pdf: null, // Mettre un lien si tu as un diplôme/certificat, sinon null
@@ -1865,4 +1865,5 @@
     </script>
 </body>
 </html>
+
 
