--- a/index.html
+++ b/index.html
@@ -1155,11 +1155,11 @@
                     <div class="timeline">
                         <div class="timeline-item">
                             <div class="timeline-year">Sept. 2025 - Feb. 2026</div>
-                            <div class="timeline-content">Mechanichal Engineering (aeronautical) - University of Technology Malaysia</div>
+                            <div class="timeline-content">Mecanichal Engineering (aeronautical) - University of Technology Malaysia</div>
                         </div>
                         <div class="timeline-item">
                             <div class="timeline-year">2022 - 2027</div>
-                            <div class="timeline-content">Aeornautical & Aerospace Engineering - Institut Polytechnique des Sciences Avancées (IPSA)</div>
+                            <div class="timeline-content">Aeronautical & Aerospace Engineering - Institut Polytechnique des Sciences Avancées (IPSA)</div>
                         </div>
                         <div class="timeline-item">
                             <div class="timeline-year">2019 - 2022</div>
@@ -1865,5 +1865,6 @@
     </script>
 </body>
 </html>
+
 
 
