--- a/index.html
+++ b/index.html
@@ -1374,6 +1374,12 @@
                 progress: 1, // Percentage
                 images: ["images/bv.png"] // Example with 2 images
             },
+            {
+                name: "Scientific Machine Learning (SciML)",
+                description: "Deep dive into the bridge between classical physics and AI. Currently implementing core optimization algorithms, from Maximum Likelihood Estimation to Newton-Raphson methods, with the ultimate goal of developing Physics-Informed Neural Networks (PINNs) for structural mechanics and fluid dynamics.",
+                progress: 5, // Percentage
+                images: ["images/grad.jpg"]
+            },
         
         ];
         // Data structure for Projects UPLOAD
@@ -1865,6 +1871,7 @@
     </script>
 </body>
 </html>
+
 
 
 
